Cleanup WebMIMERegistry implementation and fix LinkLoader behavior

- Now that content/child can also depend on media just implement
  media related mime methods in SimpleWebMIMERegistry and remove
  renderer-only overrides.

- LinkLoader should use supportsMediaMIMEType rather than
  supportsMediaSourceMIMEType in as=media cases, as the latter
  is for MediaSource extension and always fails if empty codecs
  string is given (and that was what happening in the real renderer case)

BUG=658628
TEST=http/tests/preload/preload_with_type.html
TEST=LinkLoaderTest.Preload

Review-Url: https://codereview.chromium.org/2440163002
Cr-Commit-Position: refs/heads/master@{#427037}

Former-commit-id: a7d224439f14b05798771fdf327fae51ae420664