third_party/WebKit/Source/platform/MIMETypeRegistry.h
@@ -65,6 +65,10 @@ class PLATFORM_EXPORT MIMETypeRegistry {
   // document in a frame. Includes supported JavaScript MIME types.
   static bool isSupportedNonImageMIMEType(const String& mimeType);
 
+  // Check to see if the mime type and codecs are supported media MIME types.
+  static bool isSupportedMediaMIMEType(const String& mimeType,
+                                       const String& codecs);
+
   // Check to see if the mime type and codecs are supported by the MediaSource
   // implementation.
   static bool isSupportedMediaSourceMIMEType(const String& mimeType,
